<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">URFit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_actvity">HomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_buddylist">BuddylistActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_weightlifting_options">WeightliftingOptionsActivity</string>
    <string name="title_activity_cardio_options">CardioOptionsActivity</string>
    <string name="u_first_name">Charlie</string>
    <string name="u_last_name">Kelman</string>
    <string name="u_phone_number">508-309-9557</string>
    <string name="u_facebook">facebook.com/charlie</string>
    <string name="u_twitter">"@CIK"</string>
    <string name="u_bio">Hi my name is charlie and I enjoy long walks on the beach and gettin swole.  Other enjoyable things that I enjoy to be in the partaking of includes the ice creams in additions and multiplications of the cakes.  Many say this no is the best for the swol-er-tizing, but thinking is not the agreement of mine</string>
    <string name="u_weightXP">Intermediate</string>
    <string name="u_cardioXP">Intermediate</string>
    <string name="u_login_email"></string>
    <string name="u_login_password"></string>
    <string name="title_activity_other_profile">MainActivity</string>
    <string name="title_activity_find_buddy">FindBuddyActivity</string>

    <string-array name="experience_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="prompt">Experience</string>
    <string name="title_activity_loading">"LoadingActivity "</string>
    <string name="title_activity_main_loading">LoadingActivity</string>
    <string name="title_activity_sports_search">SportsSearchActivity</string>

</resources>
