<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherProfileActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center"

        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|top"
            android:orientation ="vertical"
            >



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp" >


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name:"
                        android:id="@+id/textView"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="5dp" />
                </TableRow>


                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstName"
                        android:layout_weight="1"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:hint="First Name"
                        android:text="@string/u_first_name"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:hint="Last Name"
                        android:text="@string/u_last_name"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact Info:"
                        android:id="@+id/textView"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="20dp" />
                </TableRow>



                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone:"
                        android:id="@+id/textView"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="5dp" />
                    <EditText
                        android:id="@+id/userPhone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_column="1"
                        android:hint="555 555 5555"
                        android:singleLine="true"
                        android:phoneNumber="true"
                        android:text="@string/u_phone_number"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Twitter"
                        android:id="@+id/textView"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="5dp" />
                    <EditText
                        android:id="@+id/userTwitter"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_column="1"
                        android:singleLine="true"
                        android:hint="\@FirstnameLastname"
                        android:text="@string/u_twitter"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facebook"
                        android:id="@+id/textView"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="5dp" />
                    <EditText
                        android:id="@+id/userFacebook"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_column="1"
                        android:hint="Link"
                        android:singleLine="true"
                        android:text="@string/u_facebook"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="@dimen/row_height"
                    android:layout_width="fill_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Experience:"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="false"
                        android:phoneNumber="false"
                        android:paddingTop="20dp"
                        android:paddingBottom="5dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cardio"
                        android:id="@+id/cardioXP_button"
                        android:layout_column="1"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/u_cardioXP"
                        android:id="@+id/card_experience"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="true"
                        android:phoneNumber="false"
                        android:paddingTop="20dp"
                        android:paddingBottom="5dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weights"
                        android:id="@+id/weightXP_button"
                        android:layout_column="1"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/u_weightXP"
                        android:id="@+id/weight_experience"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:textIsSelectable="true"
                        android:singleLine="true"
                        android:phoneNumber="false"
                        android:paddingTop="10dp"
                        android:paddingBottom="5dp"
                        />

                </TableRow>



            </TableLayout>

            <EditText
                android:id="@+id/user_bio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_weight="1"
                android:layout_column="1"
                android:hint="Bio"
                android:text="@string/u_bio"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/submit_prof"
                android:layout_column="1"
                android:onClick="submit_prof" />



        </LinearLayout>

    </ScrollView>



</FrameLayout>
